i forget to commit quite often

--- a/index.html
+++ b/index.html
@@ -21,8 +21,39 @@
         </div>
     </div>
 
-    <div></div>
-          
+    <div class="Main">
+        <div class="About">Have you heard about the new ROG Phone?</div>
+        <h3>I've heard it's the <i>FASTEST</i> Phone in the World</h3>
+    </div>
+
+<div class="container">
+    <div class="pics">
+        <img src="./img1.jpeg" alt="Processor" height="150px" width="150">
+        <div>Fastest Processor On Any Phone</div>
+    </div>
+
+    <div class="pics">
+        <img src="./img2.jpeg" alt="Battery" height="150px" width="150px">
+        <div>Huge 6000 MaH Battery</div>
+    </div>
+
+    <div class="pics">
+        <img src="./img3.jpeg" alt="Cameras" height="150px" width="150px">
+        <div>Triple OIS Cameras with 108mp</div>
+    </div>
+
+    <div class="pics">
+        <img src="./img4.jpeg" alt="Design" height="150px" width="150px">
+        <div>New Sleek Design with RGB</div>
+    </div>
+</div>
+
+<div class="quote">
+    <div class="text1">"I have used most Flagship Phones, from iPhones and Androids to Pixels, but none of them
+                        compare to this Gaming Monster!"</div>
+    <div class="text2">- Barkat Ali Khan</div>
+</div>
+
     <div class="footer">
         <div>Services</div>
         <div>About</div>
