--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class ="logo" >
-        <img src="./ROG.jpg" alt="ROG Logo" height="50px" width="60px">
+        <img src="./images/ROG.jpg" alt="ROG Logo" height="50px" width="60px">
         </div>
         <div class="Settings">
           <div>Home</div>
@@ -28,22 +28,22 @@
 
 <div class="container">
     <div class="pics">
-        <img src="./img1.jpeg" alt="Processor" height="150px" width="150">
+        <img src="./images/img1.jpeg" alt="Processor" height="150px" width="150">
         <div>Fastest Processor On Any Phone</div>
     </div>
 
     <div class="pics">
-        <img src="./img2.jpeg" alt="Battery" height="150px" width="150px">
+        <img src="./images/img2.jpeg" alt="Battery" height="150px" width="150px">
         <div>Huge 6000 MaH Battery</div>
     </div>
 
     <div class="pics">
-        <img src="./img3.jpeg" alt="Cameras" height="150px" width="150px">
+        <img src="./images/img3.jpeg" alt="Cameras" height="150px" width="150px">
         <div>Triple OIS Cameras with 108mp</div>
     </div>
 
     <div class="pics">
-        <img src="./img4.jpeg" alt="Design" height="150px" width="150px">
+        <img src="./images/img4.jpeg" alt="Design" height="150px" width="150px">
         <div>New Sleek Design with RGB</div>
     </div>
 </div>
@@ -52,6 +52,12 @@
     <div class="text1">"I have used most Flagship Phones, from iPhones and Androids to Pixels, but none of them
                         compare to this Gaming Monster!"</div>
     <div class="text2">- Barkat Ali Khan</div>
+</div>
+
+<div class="buying">
+    <button>Contact Us</button>
+    <h4>yusufkhan@gmail.com</h4>
+    <h4>07448833295</h4>
 </div>
 
     <div class="footer">
