--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img src="./images/ROG.jpg" alt="ROG Logo" height="50px" width="60px">
         </div>
         <div class="Settings">
-          <div>Home</div>
-          <div>Settings</div>
-          <div>Account</div>
-          <div>About</div>
+          <a href="./index.html">Home</a>
+          <a href="./index.html">Settings</a>
+          <a href="./index.html">Account</a>
+          <a href="./index.html">About</a>
         </div>
     </div>
 
