--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <div class="Settings">
           <a href="./index.html">Home</a>
-          <a href="./index.html">Settings</a>
-          <a href="./index.html">Account</a>
-          <a href="./index.html">About</a>
+          <a href="./pages/settings.html">Settings</a>
+          <a href="./pages/account.html">Account</a>
+          <a href="./pages/about.html">About</a>
         </div>
     </div>
 
