final final touches

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <title>About</title>
 </head>
 <body>
-    <div class="about">there is no About section</div>
+    <div class="about">Yaqoob headbutted the About section</div>
     <a href="../index.html">Home Page</a>
     <style>
         .about {
