--- a/pages/account.html
+++ b/pages/account.html
@@ -7,7 +7,7 @@
     <title>Account</title>
 </head>
 <body>
-    <div class="account">there is no Account section</div>
+    <div class="account">Uzair ate the Account section for brunch</div>
     <a href="../index.html">Home Page</a>
     <style>
         .account {
