--- a/pages/settings.html
+++ b/pages/settings.html
@@ -7,7 +7,7 @@
     <title>Settings</title>
 </head>
 <body>
-    <div class="settings">there are no Settings</div>
+    <div class="settings">Ishaq had a fight with the Settings and broke it</div>
     <a href="../index.html">Home Page</a>
     <style>
         .settings {
